<resources>
    <string name="app_name">Tiles of Truth</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="logo">logo</string>
    <string name="illustration">Tiles main page</string>
    <string name="tiles_pairing">Tiles pairing (connected tiles: 0)</string>
    <string name="start_pairing">Start pairing</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="number_of_players">Number of players</string>
    <string name="one_players">1</string>
    <string name="two_players">2</string>
    <string name="three_players">3</string>
    <string name="four_players">4</string>
    <string name="tiles_configuration">Tiles configuration</string>
    <string name="start_game">START GAME</string>
    <string name="loading_text">The questions are being loaded..</string>
    <string name="true_string">True</string>
    <string name="false_string">False</string>
    <string name="false_tile">False tile</string>
    <string name="true_tile">True tile</string>
    <string name="tiles_positioning">Tiles positioning</string>
    <string name="round_timer_string">Round: 0.00 s</string>
    <string name="game_timer_string">Game: 0 s</string>
    <string name="gameover">Game over image</string>
    <string name="highscore_textview">This game\'s highscore is: 0</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="zero">0</string>
    <string name="gameover_instruction">Type the winner(s) name(s) for the scoreboard</string>
    <string name="name_s">Name(s)</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="plus">+</string>
    <string name="question_sets">QUESTION SETS</string>
    <string name="question">Question</string>
    <string name="addquestion_instruction">Add question and the correct answer</string>
    <string name="questionset_instruction">Add question set</string>
    <string name="questionset_hint">Question set\'s name</string>
    <string name="challenge_title">You have been challenged!</string>
    <string name="challenge_message">Do you want to accept the challenge?</string>
    <string name="accept">Accept</string>
    <string name="delete_question_set_title">Delete question set</string>
    <string name="delete_question_set_message">Are you sure you want to delete this question set?</string>
    <string name="delete_question_title">Delete question</string>
    <string name="delete_question_message">Are you sure you want to delete this question?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="challenge_player_title">Challenge</string>
    <string name="challenge_player_difficulty">Choose the challenge difficulty</string>
    <string name="challenge">Challenge</string>
    <string name="challenges">Challenges</string>
    <string name="delete">Delete</string>
    <string name="challenger_name_instruction">Type your name</string>
    <string name="challenger_name">Name</string>
    <string name="choose_question_set">Choose a question set</string>
    <string name="select">Select</string>
    <string name="frequency">Frequency</string>
    <string name="tiles_frequency_instruction">Change the tiles\' frequency</string>
    <string name="frequency_hint">Frequency</string>
</resources>